fixed contact page overflow top issues

--- a/www/styles.css
+++ b/www/styles.css
@@ -16,7 +16,6 @@ body {
 main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     flex-grow: 1;
     margin: 0;
     max-width: 100%;
